--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="nav">
           <a href="./index.html" class="logo"> <span class="logo-blue">Web</span>Studio</a>
           <ul class="site-nav">
-            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item"><a href="./index.html" class="link is-active">Студия</a></li>
             <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
@@ -111,7 +111,11 @@
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="works">
-            <li class="item"><img src="./img/web.jpg" alt="Web development" width="370" /></li>
+            <li class="item">
+              <div class="img-thumb">
+                <img src="./img/web.jpg" alt="Web development" width="370" />
+              </div>
+            </li>
             <li class="item">
               <img src="./img/mobile.jpg" alt="Mobile development" width="370" />
             </li>
