--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
           <a href="./index.html" class="logo"> <span class="logo-blue">Web</span>Studio</a>
           <ul class="site-nav">
             <li class="item"><a href="./index.html" class="link">Студия</a></li>
-            <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li class="item"><a href="./portfolio.html" class="link is-active">Портфолио</a></li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
