--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,17 @@
           <ul class="works-list">
             <li class="item">
               <a href="">
-                <img src="./img/techcrack.jpg" alt="Технокряк" width="370" />
+                <div class="item-thumb">
+                  <div class="item-overlay">
+                    <p class="overlay-description">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img src="./img/techcrack.jpg" alt="Технокряк" width="370" />
+                </div>
+
                 <div class="works-name">
                   <h3 class="title">Технокряк</h3>
                   <p class="description">Веб-сайт</p>
@@ -70,7 +80,16 @@
             </li>
             <li class="item">
               <a href=""
-                ><img src="./img/poster.jpg" alt="Постер" width="370" />
+                ><div class="item-thumb">
+                  <div class="item-overlay">
+                    <p class="overlay-description">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img src="./img/poster.jpg" alt="Постер" width="370" />
+                </div>
                 <div class="works-name">
                   <h3 class="title">Постер New Orlean vs Golden Star</h3>
                   <p class="description">Дизайн</p>
@@ -79,7 +98,16 @@
             </li>
             <li class="item">
               <a href=""
-                ><img src="./img/seafood.jpg" alt="Seafood" width="370" />
+                ><div class="item-thumb">
+                  <div class="item-overlay">
+                    <p class="overlay-description">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img src="./img/seafood.jpg" alt="Seafood" width="370" />
+                </div>
                 <div class="works-name">
                   <h3 class="title">Ресторан Seafood</h3>
                   <p class="description">Приложение</p>
@@ -88,7 +116,16 @@
             </li>
             <li class="item">
               <a href=""
-                ><img src="./img/prime.jpg" alt="Prime" width="370" />
+                ><div class="item-thumb">
+                  <div class="item-overlay">
+                    <p class="overlay-description">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img src="./img/prime.jpg" alt="Prime" width="370" />
+                </div>
                 <div class="works-name">
                   <h3 class="title">Проект Prime</h3>
                   <p class="description">Маркетинг</p>
@@ -97,7 +134,16 @@
             </li>
             <li class="item">
               <a href=""
-                ><img src="./img/boxes.jpg" alt="Boxes" width="370" />
+                ><div class="item-thumb">
+                  <div class="item-overlay">
+                    <p class="overlay-description">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img src="./img/boxes.jpg" alt="Boxes" width="370" />
+                </div>
                 <div class="works-name">
                   <h3 class="title">Проект Boxes</h3>
                   <p class="description">Приложение</p>
@@ -106,7 +152,16 @@
             </li>
             <li class="item">
               <a href=""
-                ><img src="./img/inspiration.jpg" alt="Inspiration" width="370" />
+                ><div class="item-thumb">
+                  <div class="item-overlay">
+                    <p class="overlay-description">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img src="./img/inspiration.jpg" alt="Inspiration" width="370" />
+                </div>
                 <div class="works-name">
                   <h3 class="title">Inspiration has no Borders</h3>
                   <p class="description">Веб-сайт</p>
@@ -115,7 +170,16 @@
             </li>
             <li class="item">
               <a href=""
-                ><img src="./img/limited.jpg" alt="Limited Edition" width="370" />
+                ><div class="item-thumb">
+                  <div class="item-overlay">
+                    <p class="overlay-description">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img src="./img/limited.jpg" alt="Limited Edition" width="370" />
+                </div>
                 <div class="works-name">
                   <h3 class="title">Издание Limited Edition</h3>
                   <p class="description">Дизайн</p>
@@ -124,7 +188,16 @@
             </li>
             <li class="item">
               <a href=""
-                ><img src="./img/lab.jpg" alt="Проект LAB" width="370" />
+                ><div class="item-thumb">
+                  <div class="item-overlay">
+                    <p class="overlay-description">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img src="./img/lab.jpg" alt="Проект LAB" width="370" />
+                </div>
                 <div class="works-name">
                   <h3 class="title">Проект LAB</h3>
                   <p class="description">Маркетинг</p>
@@ -133,7 +206,16 @@
             </li>
             <li class="item">
               <a href=""
-                ><img src="./img/business.jpg" alt="Growing Business" width="370" />
+                ><div class="item-thumb">
+                  <div class="item-overlay">
+                    <p class="overlay-description">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <img src="./img/business.jpg" alt="Growing Business" width="370" />
+                </div>
                 <div class="works-name">
                   <h3 class="title">Growing Business</h3>
                   <p class="description">Приложение</p>
