--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
 
           <ul class="works-list">
             <li class="item">
-              <a href="">
+              <a href="" class="item-link">
                 <div class="item-thumb">
                   <div class="item-overlay">
                     <p class="overlay-description">
@@ -79,7 +79,7 @@
               </a>
             </li>
             <li class="item">
-              <a href=""
+              <a href="" class="item-link"
                 ><div class="item-thumb">
                   <div class="item-overlay">
                     <p class="overlay-description">
@@ -97,7 +97,7 @@
               >
             </li>
             <li class="item">
-              <a href=""
+              <a href="" class="item-link"
                 ><div class="item-thumb">
                   <div class="item-overlay">
                     <p class="overlay-description">
@@ -115,7 +115,7 @@
               >
             </li>
             <li class="item">
-              <a href=""
+              <a href="" class="item-link"
                 ><div class="item-thumb">
                   <div class="item-overlay">
                     <p class="overlay-description">
@@ -133,7 +133,7 @@
               >
             </li>
             <li class="item">
-              <a href=""
+              <a href="" class="item-link"
                 ><div class="item-thumb">
                   <div class="item-overlay">
                     <p class="overlay-description">
@@ -151,7 +151,7 @@
               >
             </li>
             <li class="item">
-              <a href=""
+              <a href="" class="item-link"
                 ><div class="item-thumb">
                   <div class="item-overlay">
                     <p class="overlay-description">
@@ -169,7 +169,7 @@
               >
             </li>
             <li class="item">
-              <a href=""
+              <a href="" class="item-link"
                 ><div class="item-thumb">
                   <div class="item-overlay">
                     <p class="overlay-description">
@@ -187,7 +187,7 @@
               >
             </li>
             <li class="item">
-              <a href=""
+              <a href="" class="item-link"
                 ><div class="item-thumb">
                   <div class="item-overlay">
                     <p class="overlay-description">
@@ -205,7 +205,7 @@
               >
             </li>
             <li class="item">
-              <a href=""
+              <a href="" class="item-link"
                 ><div class="item-thumb">
                   <div class="item-overlay">
                     <p class="overlay-description">
